[package]
name = "blue_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.0"
fern = "0.6.2"
futures = "0.3.28"
log = "0.4.20"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }

serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
