[package]
name = "rustysky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustysky_cli"
path = "src/bin/rustysky_cli.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
reqwest = { version =  "0.11.22", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
fern = "0.6.2"
base64 = "0.21.4"
